# Xlib-GUI-Example

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/disabled_workflows/: linux-build.yml  macos-build.yml  windows-build.yml
cmake/: metadata_config.cmake
cmake/compiler/: clang_c.cmake  clang_cxx.cmake  config_dispatch.cmake  gcc_c.cmake  gcc_cxx.cmake  msvc_ccxx.cmake
cmake/utility/: clang_format.cmake  clang_tidy.cmake  metadata_tools.cmake  root_setup.cmake
docs/: Doxyfile
docs/templ/: Doxyfile.in  README.md.in  inaug.md.in  index.html.in
include/xptemp/: main.hpp
lib/: CMakeLists.txt
lib/xptemp_metadata/: CMakeLists.txt
lib/xptemp_metadata/templ/: info.h.in  version.h.in
scripts/: build  build.bat  clang-format  clang-format.bat  clang-tidy  clang-tidy.bat  clean  clean.bat  configure  configure.bat  install  install.bat  workflow  workflow.bat
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
tests/benchmark/: CMakeLists.txt
tests/cli/: CMakeLists.txt  dev_exe.cpp
tests/unit/: CMakeLists.txt
